display reports list:

--- a/reporting/templates/base.html
+++ b/reporting/templates/base.html
@@ -34,7 +34,8 @@
 
     <nav id="navTop">
         <ul>
-            <li><a href="{% url upload_file %}" title="Mở trình quản trị sẵn có của hệ thống">Add new report</a></li>
+            <li><a href="{% url upload_file %}" title="Mở trình quản trị sẵn có của hệ thống">Add new report using excel</a></li>
+            <li><a href="{% url spreadsheet_report %}" title="Mở trình quản trị sẵn có của hệ thống">Add new report using google spreadsheet</a></li>
             <li><a href="{% url file_list %}" title="Mở danh sách upload">Report list</a></li>
         </ul>		
     </nav>
