--- a/reporting/templates/index.html
+++ b/reporting/templates/index.html
@@ -1,4 +1,12 @@
 ﻿{% extends "base.html" %}
 {% load url from future %}
+
 {% block content %}
+
+    {% if message %}
+	    {{message}}
+    {% endif %}
+
+    
+
 {% endblock %}
